Jeonghoon#35 feat user to group (#40)
* chore: domain모듈로 이동

* chore: 카테고리 수정

* feat: API 통신 기능 추가

* feat: user-group 관련 기능 추가

* feat: user-group 관련 기능 추가

* chore: Category.java 모듈 위치 이동

* test: 테스트 코드 작성

* chore: 기능 변경에 따른 코드 수정

* test: 테스트 코드 수정